--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="news">News</string>
     <string name="user_image">User Image</string>
+    <string name="title_activity_news_editor">NewsEditor</string>
 </resources>
