add newsDetails , basic layout and add intent navigator

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="title">Title</string>
     <string name="content">Content</string>
     <string name="news_image">News Image</string>
+    <string name="title_activity_news_details">NewsDetails</string>
+    <string name="write_comment">write comment</string>
 </resources>
