--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,10 @@
     <string name="news_image">News Image</string>
     <string name="title_activity_news_details">NewsDetails</string>
     <string name="write_comment">write comment</string>
+    <string name="title_activity_authentication">Authentication</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="login">Login</string>
+    <string name="management">Management</string>
 </resources>
