--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="login">Login</string>
     <string name="management">Management</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="username">UserName</string>
 </resources>
