--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="password">Password</string>
     <string name="username">UserName</string>
     <string name="anonymous">Anonymous</string>
+    <string name="contact_us">Contact us</string>
 </resources>
