--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="username">UserName</string>
     <string name="anonymous">Anonymous</string>
     <string name="contact_us">Contact us</string>
+    <string name="title_activity_messages">MessagesActivity</string>
 </resources>
