--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="anonymous">Anonymous</string>
     <string name="contact_us">Contact us</string>
     <string name="title_activity_messages">MessagesActivity</string>
+    <string name="write_a_message">Write a Message</string>
 </resources>
