--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,5 @@
     <string name="action">Action</string>
     <string name="edit">Edit</string>
     <string name="delete">Delete</string>
+    <string name="choose_action">Choose Action</string>
 </resources>
